--- a/Example/index.html
+++ b/Example/index.html
@@ -5,14 +5,19 @@
     <meta name="author" content="Salvatore Gentile">
     <title>tiltEffect - Metro Tiles Tilt Effect</title>
 
-    <link rel="stylesheet" href="tiltEffect/tiltEffect.css">
+    <link rel="stylesheet" href="../tiltEffect/tiltEffect.css">
     <style type="text/css">
+        .content{
+            width: 420px;
+        }
+
         .tile {
             background-color: #f90;
             color: #fff;
             height: 200px;
+            float: left;
             font-family: sans-serif;
-            margin: 10px;
+            margin: 10px 10px 0 0;
             position: relative;
             width: 200px;
         }
@@ -37,14 +42,28 @@
 </head>
 
 <body>
-    <div class="tile">
-        <span>Standard Tile</span>
-    </div>
-    
-    <div class="tile large">
-        <span>Large Tile</span>
+    <div class="content">
+        <div class="tile">
+            <img src="icons/phone.png" alt="Phone">
+            <span>Phone</span>
+        </div>
+
+        <div class="tile">
+            <img src="icons/messaging.png" alt="Messaging">
+            <span>Messaging</span>
+        </div>
+
+        <div class="tile large">
+            <img src="icons/mail.png" alt="Mail">
+            <span>Mail</span>
+        </div>
     </div>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="tiltEffect/tiltEffect.js"></script>
+    <script src="../tiltEffect/tiltEffect.js"></script>
+    <script>
+    	$(document).ready(function(){
+        	$('.tile').tiltEffect();
+        });
+    </script>
 </body>
