--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tilteffect by SalGnt</title>
+    <title>tiltEffect by SalGnt</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tilteffect</h1>
+        <h1>tiltEffect</h1>
         <p>Metro Tiles Tilt Effect with CSS3/JS</p>
 
         <p class="view"><a href="https://github.com/SalGnt/tiltEffect">View the Project on GitHub <small>SalGnt/tiltEffect</small></a></p>
