--- a/Example/index.html
+++ b/Example/index.html
@@ -16,16 +16,17 @@
             color: #fff;
             height: 200px;
             float: left;
-            font-family: sans-serif;
+            font-family: "Open Sans", sans-serif;
+            font-weight: 300;
             margin: 10px 10px 0 0;
             position: relative;
             width: 200px;
         }
-        
+
         .tile.large {
             width: 410px;
         }
-        
+
         img {
             display: block;
             height: 100%;
