--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ SOFTWARE.
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script id="cookiebanner" src="http://salgnt.github.io/assets/js/cookiebanner.js" data-bg="#111" data-fg="#9EABB3" data-text-align="left">
+    <script id="cookiebanner" src="http://salgnt.github.io/assets/js/cookiebanner.js" data-text-align="left"></script>
     <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
